montysolr/src/java/org/apache/lucene/queryparser/flexible/aqp/parser/ADSParser.java
// $ANTLR 3.5.2 /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g 2016-11-01 17:36:02

   package org.apache.lucene.queryparser.flexible.aqp.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class ADSParser extends UnforgivingParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "AS_CHAR", "ATOM", "AUTHOR_SEARCH", 
		"BOOST", "CARAT", "CLAUSE", "COLON", "COMMA", "DATE_RANGE", "DATE_TOKEN", 
		"DQUOTE", "D_NUMBER", "EQUAL", "ESC_CHAR", "FIELD", "FUNC_NAME", "FUZZY", 
		"HASH", "HOUR", "H_NUMBER", "INT", "LBRACK", "LOCAL_PARAMS", "LPAREN", 
		"MINUS", "MODIFIER", "M_NUMBER", "NEAR", "NOT", "NUMBER", "OPERATOR", 
		"OR", "PHRASE", "PHRASE_ANYTHING", "PLUS", "QANYTHING", "QCOORDINATE", 
		"QDATE", "QDELIMITER", "QFUNC", "QIDENTIFIER", "QMARK", "QNORMAL", "QPHRASE", 
		"QPHRASETRUNC", "QPOSITION", "QRANGEEX", "QRANGEIN", "QREGEX", "QTRUNCATED", 
		"RBRACK", "REGEX", "RPAREN", "SEMICOLON", "STAR", "S_NUMBER", "TERM_CHAR", 
		"TERM_NORMAL", "TERM_START_CHAR", "TERM_TRUNCATED", "TILDE", "TMODIFIER", 
		"TO", "WS", "XMETA", "'#'", "'<=>'", "'='", "'arXiv:'", "'arxiv:'", "'doi:'"
	};
	public static final int EOF=-1;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int AND=4;
	public static final int AS_CHAR=5;
	public static final int ATOM=6;
	public static final int AUTHOR_SEARCH=7;
	public static final int BOOST=8;
	public static final int CARAT=9;
	public static final int CLAUSE=10;
	public static final int COLON=11;
	public static final int COMMA=12;
	public static final int DATE_RANGE=13;
	public static final int DATE_TOKEN=14;
	public static final int DQUOTE=15;
	public static final int D_NUMBER=16;
	public static final int EQUAL=17;
	public static final int ESC_CHAR=18;
	public static final int FIELD=19;
	public static final int FUNC_NAME=20;
	public static final int FUZZY=21;
	public static final int HASH=22;
	public static final int HOUR=23;
	public static final int H_NUMBER=24;
	public static final int INT=25;
	public static final int LBRACK=26;
	public static final int LOCAL_PARAMS=27;
	public static final int LPAREN=28;
	public static final int MINUS=29;
	public static final int MODIFIER=30;
	public static final int M_NUMBER=31;
	public static final int NEAR=32;
	public static final int NOT=33;
	public static final int NUMBER=34;
	public static final int OPERATOR=35;
	public static final int OR=36;
	public static final int PHRASE=37;
	public static final int PHRASE_ANYTHING=38;
	public static final int PLUS=39;
	public static final int QANYTHING=40;
	public static final int QCOORDINATE=41;
	public static final int QDATE=42;
	public static final int QDELIMITER=43;
	public static final int QFUNC=44;
	public static final int QIDENTIFIER=45;
	public static final int QMARK=46;
	public static final int QNORMAL=47;
	public static final int QPHRASE=48;
	public static final int QPHRASETRUNC=49;
	public static final int QPOSITION=50;
	public static final int QRANGEEX=51;
	public static final int QRANGEIN=52;
	public static final int QREGEX=53;
	public static final int QTRUNCATED=54;
	public static final int RBRACK=55;
	public static final int REGEX=56;
	public static final int RPAREN=57;
	public static final int SEMICOLON=58;
	public static final int STAR=59;
	public static final int S_NUMBER=60;
	public static final int TERM_CHAR=61;
	public static final int TERM_NORMAL=62;
	public static final int TERM_START_CHAR=63;
	public static final int TERM_TRUNCATED=64;
	public static final int TILDE=65;
	public static final int TMODIFIER=66;
	public static final int TO=67;
	public static final int WS=68;
	public static final int XMETA=69;

	// delegates
	public UnforgivingParser[] getDelegates() {
		return new UnforgivingParser[] {};
	}

	// delegators


	public ADSParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ADSParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return ADSParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g"; }


	public static class mainQ_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "mainQ"
	// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:44:1: mainQ : ( clauseOr )+ EOF -> ^( OPERATOR[\"DEFOP\"] ( clauseOr )+ ) ;
	public final ADSParser.mainQ_return mainQ() throws RecognitionException {
		ADSParser.mainQ_return retval = new ADSParser.mainQ_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope clauseOr1 =null;

		Object EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_clauseOr=new RewriteRuleSubtreeStream(adaptor,"rule clauseOr");

		try {
			// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:44:7: ( ( clauseOr )+ EOF -> ^( OPERATOR[\"DEFOP\"] ( clauseOr )+ ) )
			// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:45:3: ( clauseOr )+ EOF
			{
			// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:45:3: ( clauseOr )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==AUTHOR_SEARCH||(LA1_0 >= COMMA && LA1_0 <= DATE_RANGE)||LA1_0==D_NUMBER||LA1_0==FUNC_NAME||(LA1_0 >= HOUR && LA1_0 <= H_NUMBER)||(LA1_0 >= LBRACK && LA1_0 <= MINUS)||LA1_0==NUMBER||(LA1_0 >= PHRASE && LA1_0 <= PLUS)||LA1_0==QMARK||LA1_0==REGEX||(LA1_0 >= SEMICOLON && LA1_0 <= STAR)||LA1_0==TERM_NORMAL||LA1_0==TERM_TRUNCATED||LA1_0==TO||(LA1_0 >= 70 && LA1_0 <= 75)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:45:3: clauseOr
					{
					pushFollow(FOLLOW_clauseOr_in_mainQ188);
					clauseOr1=clauseOr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_clauseOr.add(clauseOr1.getTree());
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_mainQ191); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: clauseOr
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 45:17: -> ^( OPERATOR[\"DEFOP\"] ( clauseOr )+ )
			{
				// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:45:20: ^( OPERATOR[\"DEFOP\"] ( clauseOr )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(OPERATOR, "DEFOP"), root_1);
				if ( !(stream_clauseOr.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_clauseOr.hasNext() ) {
					adaptor.addChild(root_1, stream_clauseOr.nextTree());
				}
				stream_clauseOr.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "mainQ"


	public static class clauseOr_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "clauseOr"
	// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:49:1: clauseOr : (first= clauseAnd -> $first) ( or others= clauseAnd -> ^( OPERATOR[\"OR\"] ( clauseAnd )+ ) )* ;
	public final ADSParser.clauseOr_return clauseOr() throws RecognitionException {
		ADSParser.clauseOr_return retval = new ADSParser.clauseOr_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope first =null;
		ParserRuleReturnScope others =null;
		ParserRuleReturnScope or3 =null;

		RewriteRuleSubtreeStream stream_or=new RewriteRuleSubtreeStream(adaptor,"rule or");
		RewriteRuleSubtreeStream stream_clauseAnd=new RewriteRuleSubtreeStream(adaptor,"rule clauseAnd");

		try {
			// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:50:3: ( (first= clauseAnd -> $first) ( or others= clauseAnd -> ^( OPERATOR[\"OR\"] ( clauseAnd )+ ) )* )
			// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:50:5: (first= clauseAnd -> $first) ( or others= clauseAnd -> ^( OPERATOR[\"OR\"] ( clauseAnd )+ ) )*
			{
			// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:50:5: (first= clauseAnd -> $first)
			// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:50:6: first= clauseAnd
			{
			pushFollow(FOLLOW_clauseAnd_in_clauseOr224);
			first=clauseAnd();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_clauseAnd.add(first.getTree());
			// AST REWRITE
			// elements: first
			// token labels: 
			// rule labels: first, retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_first=new RewriteRuleSubtreeStream(adaptor,"rule first",first!=null?first.getTree():null);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 50:22: -> $first
			{
				adaptor.addChild(root_0, stream_first.nextTree());
			}


			retval.tree = root_0;
			}

			}

			// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:50:33: ( or others= clauseAnd -> ^( OPERATOR[\"OR\"] ( clauseAnd )+ ) )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==OR) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:50:34: or others= clauseAnd
					{
					pushFollow(FOLLOW_or_in_clauseOr233);
					or3=or();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_or.add(or3.getTree());
					pushFollow(FOLLOW_clauseAnd_in_clauseOr237);
					others=clauseAnd();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_clauseAnd.add(others.getTree());
					// AST REWRITE
					// elements: clauseAnd
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 50:54: -> ^( OPERATOR[\"OR\"] ( clauseAnd )+ )
					{
						// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:50:57: ^( OPERATOR[\"OR\"] ( clauseAnd )+ )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(OPERATOR, "OR"), root_1);
						if ( !(stream_clauseAnd.hasNext()) ) {
							throw new RewriteEarlyExitException();
						}
						while ( stream_clauseAnd.hasNext() ) {
							adaptor.addChild(root_1, stream_clauseAnd.nextTree());
						}
						stream_clauseAnd.reset();

						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;

				default :
					break loop2;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "clauseOr"


	public static class clauseAnd_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "clauseAnd"
	// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:53:1: clauseAnd : (first= clauseNot -> $first) ( and others= clauseNot -> ^( OPERATOR[\"AND\"] ( clauseNot )+ ) )* ;
	public final ADSParser.clauseAnd_return clauseAnd() throws RecognitionException {
		ADSParser.clauseAnd_return retval = new ADSParser.clauseAnd_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope first =null;
		ParserRuleReturnScope others =null;
		ParserRuleReturnScope and4 =null;

		RewriteRuleSubtreeStream stream_and=new RewriteRuleSubtreeStream(adaptor,"rule and");
		RewriteRuleSubtreeStream stream_clauseNot=new RewriteRuleSubtreeStream(adaptor,"rule clauseNot");

		try {
			// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:54:3: ( (first= clauseNot -> $first) ( and others= clauseNot -> ^( OPERATOR[\"AND\"] ( clauseNot )+ ) )* )
			// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:54:5: (first= clauseNot -> $first) ( and others= clauseNot -> ^( OPERATOR[\"AND\"] ( clauseNot )+ ) )*
			{
			// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:54:5: (first= clauseNot -> $first)
			// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:54:6: first= clauseNot
			{
			pushFollow(FOLLOW_clauseNot_in_clauseAnd266);
			first=clauseNot();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_clauseNot.add(first.getTree());
			// AST REWRITE
			// elements: first
			// token labels: 
			// rule labels: first, retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_first=new RewriteRuleSubtreeStream(adaptor,"rule first",first!=null?first.getTree():null);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 54:23: -> $first
			{
				adaptor.addChild(root_0, stream_first.nextTree());
			}


			retval.tree = root_0;
			}

			}

			// /dvt/workspace2/montysolr/contrib/adsabs/grammars/ADS.g:54:34: ( and others= clauseNot -> ^( OPERATOR[\"AND\"] ( clauseNot )+ ) )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==AND) ) {
					alt3=1;
				}
